--- a/ControlPanel.css
+++ b/ControlPanel.css
@@ -4,7 +4,7 @@
 	background-image : url(dropDown_1_.png);
 	background-repeat : no-repeat;
 }
-header
+.headerContainer
 {
 	background : #595062;
 	background : rgba(89, 80, 98, 1);
@@ -12,6 +12,50 @@ header
 	border-color : #BC98DA;
 	border-color : rgba(188, 152, 218, 1);
 	border-width : 1px;
+}
+.titleText
+{
+	font-family : Consolas;
+	font-size : 25px;
+	color : #B3B3B3;
+	color : rgb(179, 179, 179);
+}
+.container
+{
+	background : #595062;
+	background : rgba(89, 80, 98, 1);
+	border-style : Solid;
+	border-color : #BC98DA;
+	border-color : rgba(188, 152, 218, 1);
+	border-width : 1px;
+}
+.removeBtn
+{
+	font-family : Consolas;
+	font-size : 25px;
+	color : #000000;
+	color : rgb(0, 0, 0);
+	background : #746187;
+	background : rgba(116, 97, 135, 1);
+	border-style : Solid;
+	border-color : #BC98DA;
+	border-color : rgba(188, 152, 218, 1);
+	border-width : 1px;
+	border-radius : 9px;
+	-moz-border-radius : 9px;
+	-webkit-border-radius : 9px;
+}
+.dropdownContainer
+{
+	background : #2F243A;
+	background : rgba(47, 36, 58, 1);
+	border-style : Solid;
+	border-color : #BC98DA;
+	border-color : rgba(188, 152, 218, 1);
+	border-width : 1px;
+	border-radius : 5px;
+	-moz-border-radius : 5px;
+	-webkit-border-radius : 5px;
 }
 .usernamePanel
 {
@@ -27,6 +71,10 @@ header
 }
 .logoutBtn
 {
+	font-family : Consolas;
+	font-size : 25px;
+	color : #000000;
+	color : rgb(0, 0, 0);
 	background : #746187;
 	background : rgba(116, 97, 135, 1);
 	border-style : Solid;
@@ -37,36 +85,13 @@ header
 	-moz-border-radius : 5px;
 	-webkit-border-radius : 5px;
 }
-body
-{
-	background : #595062;
-	background : rgba(89, 80, 98, 1);
-	border-style : Solid;
-	border-color : #BC98DA;
-	border-color : rgba(188, 152, 218, 1);
-	border-width : 1px;
-}
-.removeBtn
-{
-	background : #746187;
-	background : rgba(116, 97, 135, 1);
-	border-style : Solid;
-	border-color : #BC98DA;
-	border-color : rgba(188, 152, 218, 1);
-	border-width : 1px;
-	border-radius : 9px;
-	-moz-border-radius : 9px;
-	-webkit-border-radius : 9px;
-}
-.headersText1
-{
-	font-family : Consolas;
-	font-size : 25px;
-	color : #B3B3B3;
-	color : rgb(179, 179, 179);
-}
+
 .addBtn
 {
+	font-family : Consolas;
+	font-size : 25px;
+	color : #000000;
+	color : rgb(0, 0, 0);
 	background : #746187;
 	background : rgba(116, 97, 135, 1);
 	border-style : Solid;
@@ -76,25 +101,6 @@ body
 	border-radius : 9px;
 	-moz-border-radius : 9px;
 	-webkit-border-radius : 9px;
-}
-.headersText2
-{
-	font-family : Consolas;
-	font-size : 25px;
-	color : #B3B3B3;
-	color : rgb(179, 179, 179);
-}
-.panel
-{
-	background : #2F243A;
-	background : rgba(47, 36, 58, 1);
-	border-style : Solid;
-	border-color : #BC98DA;
-	border-color : rgba(188, 152, 218, 1);
-	border-width : 1px;
-	border-radius : 5px;
-	-moz-border-radius : 5px;
-	-webkit-border-radius : 5px;
 }
 .headerPanel
 {
@@ -108,33 +114,12 @@ body
 	-moz-border-radius : 2px;
 	-webkit-border-radius : 2px;
 }
-.buttonText2
-{
-	font-family : Consolas;
-	font-size : 25px;
-	color : #000000;
-	color : rgb(0, 0, 0);
-}
 .subHeadersText
 {
 	font-family : Consolas;
 	font-size : 25px;
 	color : #999999;
 	color : rgb(153, 153, 153);
-}
-.buttonText
-{
-	font-family : Consolas;
-	font-size : 25px;
-	color : #000000;
-	color : rgb(0, 0, 0);
-}
-.buttonText3
-{
-	font-family : Consolas;
-	font-size : 25px;
-	color : #000000;
-	color : rgb(0, 0, 0);
 }
 .dropDown
 {
@@ -152,27 +137,4 @@ body
 	border-radius : 9px;
 	-moz-border-radius : 9px;
 	-webkit-border-radius : 9px;
-}
-.background
-{
-	background : #ACA0B7;
-	background : rgba(172, 160, 183, 1);
-	border-style : Solid;
-	border-color : #BC98DA;
-	border-color : rgba(188, 152, 218, 1);
-	border-width : 1px;
-}
-.headersText
-{
-	font-family : Consolas;
-	font-size : 25px;
-	color : #B3B3B3;
-	color : rgb(179, 179, 179);
-}
-.buttonText1
-{
-	font-family : Consolas;
-	font-size : 25px;
-	color : #000000;
-	color : rgb(0, 0, 0);
 }
