--- a/Templates/login.html
+++ b/Templates/login.html
@@ -4,10 +4,7 @@
         <title>Family Tree Creator</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="login.css">
-        <script>
-            function register() {}
-        </script>
+        <link rel="stylesheet" type="text/css" href="/static/login.css">
     </head>
     <body>
       <h1 class="title">Family Tree Creator</h1>
