Moved control panel files and deleted unneeded files

--- a/Templates/login.html
+++ b/Templates/login.html
@@ -10,8 +10,8 @@
       <h1 class="title">Family Tree Creator</h1>
         <div class="container">
             <form id="login" method="post" class="loginForm">
-                <label class="inputTitles">Username:</label>
-                <input type="text" placeholder="Username" id="username" class="inputText" name="username"/>
+                <label class="inputTitles">Email:</label>
+                <input type="text" placeholder="Email" id="email" class="inputText" name="email"/>
                 <br><br>
                 <label class="inputTitles">Password:</label>
                 <input type="password" placeholder="Password" id="pwd" class="inputText" name="pwd"/>
