--- a/controlpanel.css
+++ b/controlpanel.css
@@ -20,8 +20,7 @@
 	font-size : 25px;
 	color : #B3B3B3;
 	color : rgb(179, 179, 179);
-	margin: auto;
-	width: 70%;
+	text-align: center;
 	padding: 10px;
 }
 HTML{
