--- a/Static/login.css
+++ b/Static/login.css
@@ -17,6 +17,12 @@ html{
 	font-size : 25px;
 	color : #B3B3B3;
 }
+.registerInputTitles
+{
+  font-family : Consolas, monaco, monospace;
+  font-size: 14px;
+  color : #B3B3B3;
+}
 .container{
     width: 500px;
     height: 400px;
@@ -67,8 +73,61 @@ html{
 	-webkit-border-radius : 5px;
   font-size: 22px;
 }
+.registerInputText
+{
+	border-style : Solid;
+	border-color : #000000;
+	border-width : 1px;
+	border-radius : 5px;
+	-moz-border-radius : 5px;
+	-webkit-border-radius : 5px;
+  font-size: 14px;
+  width: 70%;
+}
 
 .loginForm{
   padding-top: 25%;
   padding-bottom: 25%;
+}
+
+/*-------------*/
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+    margin-top: 5%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
