--- a/Templates/regions_update.html
+++ b/Templates/regions_update.html
@@ -4,7 +4,7 @@
         <title>Family Tree Creator</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-     	<link rel="stylesheet" type="text/css" href="regions_update.css">
+     	<link rel="stylesheet" type="text/css" href="/static/regions_update.css">
 </head>
 <body>
   <div class="panel">
