--- a/Static/regions_update.css
+++ b/Static/regions_update.css
@@ -103,3 +103,78 @@ a:visited{
 	color : rgb(153, 153, 153);
 	text-decoration: none;
 }
+
+.registerInputTitles
+{
+  font-family : Consolas, monaco, monospace;
+  font-size: 14px;
+  color : #B3B3B3;
+}
+
+.btn
+{
+	background : #746187;
+	border-style : Solid;
+	border-color : #BC98DA;
+	border-width : 1px;
+	border-radius : 6px;
+	-moz-border-radius : 6px;
+	-webkit-border-radius : 6px;
+  font-family : Consolas, monaco, monospace;
+	font-size : 25px;
+  margin-right: 2%;
+}
+
+.registerInputText
+{
+	border-style : Solid;
+	border-color : #000000;
+	border-width : 1px;
+	border-radius : 5px;
+	-moz-border-radius : 5px;
+	-webkit-border-radius : 5px;
+  font-size: 14px;
+  width: 70%;
+}
+
+/*-------------*/
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+    margin-top: 5%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
