--- a/Templates/regions_modal_included.html
+++ b/Templates/regions_modal_included.html
@@ -49,8 +49,15 @@
                   <br><br>
                   <label class="registerInputTitles">Birthdate:</label>
                   <input type="birthdate" name="entryType" class="registerInputText" style="width:53%"placeholder="MM/DD/YYYY">
-                  <br><br><button class="Btn" onclick="selectParent()">Select Other Parent</button>
-		  <br><br><button class="Btn" onclick="addEntry()">Add Entry</button>
+                  
+		  <br><br><label class="registerInputTitles">Parent1:</label>
+                  <select>
+			<option value="Child">Child</option>
+		  </select>
+		  <br><br><label class="registerInputTitles">Parent2:</label>
+                  <select>
+		  </select>
+		   <br><br><button class="Btn" onclick="addEntry()">Add Entry</button>
 		</form>
             </div>
         </div>
