Added new region.html to work with server

--- a/Templates/regions_modal_included.html
+++ b/Templates/regions_modal_included.html
@@ -4,7 +4,7 @@
         <title>Family Tree Creator</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-     	<link rel="stylesheet" type="text/css" href="regions_update.css">
+     	<link rel="stylesheet" type="text/css" href="/static/regions_update.css">
 </head>
 <body>
   <div class="panel">
@@ -49,7 +49,7 @@
                   <br><br>
                   <label class="registerInputTitles">Birthdate:</label>
                   <input type="birthdate" name="entryType" class="registerInputText" style="width:53%"placeholder="MM/DD/YYYY">
-                  
+
 		  <br><br><label class="registerInputTitles">Parent1:</label>
                   <select>
 			<option value="Child">Child</option>
