--- a/Templates/controlpanel.html
+++ b/Templates/controlpanel.html
@@ -19,7 +19,7 @@
                     <ul class="dropdown-menu">
                         <li>
                             <a href="#">
-                                <span class="caret">Tree</span>
+                                <span class="caret">{{ families[0] }}</span>
                             </a>
                         </li>
                     </ul>
@@ -28,14 +28,48 @@
             <div class="buttonContainer">
                 <button class="Btn" onclick="share()">Share Treehouse</button><br>
                 <button class="Btn" onclick="remove()">Remove Treehouse</button><br>
-                <button class="Btn" onclick="add()">Add Treehouse</button><br>
+                <button id="addBtn" class="Btn" onclick="add()">Add Treehouse</button><br>
                 <button class="Btn" onclick="logout()">Logout</button>
+            </div>
+        </div>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2 style="font-family : Consolas, monaco, monospace;">The familyName</h2>
+                <form action="/addTree" method="post">
+                    <br><br>
+                    <label class="registerInputTitles">Family Name:</label>
+                    <input type="name" name="treeName" class="registerInputText" placeholder="Name">
+                    <br><br>
+                    <button class="Btn" onclick="addTreehouse()">Add Treehouse</button>
+                </form>
             </div>
         </div>
     </body>
     <script>
         function addTolist() {
             $("#header ul").append('<li><a href="#"><span class="caret">Tree</span></a></li>');
+        }
+        // Get the modal
+        var modal = document.getElementById('myModal');
+        // Get the button that opens the modal
+        var btn = document.getElementById("addBtn");
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+        // When the user clicks the button, open the modal
+        btn.onclick = function() {
+            event.preventDefault();
+            modal.style.display = "block";
+        }
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
         }
     </script>
 </html>
