--- a/Templates/regions_modal_included.html
+++ b/Templates/regions_modal_included.html
@@ -4,65 +4,67 @@
         <title>Family Tree Creator</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-     	<link rel="stylesheet" type="text/css" href="/static/regions_update.css">
-</head>
-<body>
-  <div class="panel">
-    <h1 class="titleText">{{ familyName }}</h1>
-		<div>
-			<button class="Btn" onclick="controlPanel()">Control Panel</button>
-			<button class="Btn" onclick="logout()">Logout</button>
-		</div>
-  </div>
+        <link rel="stylesheet" type="text/css" href="/static/regions_update.css">
+    </head>
+    <body>
+        <div class="panel">
+            <h1 class="titleText">{{ familyName }}</h1>
+            <div>
+                <button class="Btn" onclick="controlPanel()">Control Panel</button>
+                <button class="Btn" onclick="logout()">Logout</button>
+            </div>
+        </div>
 
-  <div class="center">
-    <div class="treePanel">
-    	<img id="temp" src="family_tree.jpg" height="600px"></img>
-    </div>
-  </div>
+        <div class="center">
+            <div class="treePanel">
+                <img id="temp" src="family_tree.jpg" height="600px"></img>
+            </div>
+        </div>
 
-	<div class="footer">
-    		<div class="footerPanel">
-          <div id="buttonContainer">
-              <button id="addBtn" class="Btn" onclick="add()">Add</button>
-              <button class="Btn" onclick="edit()">Edit</button>
-              <button class="Btn" onclick="remove()">Remove</button>
-              <button class="Btn" onclick="share()">Share</button>
-              <button class="Btn" onclick="download()">Download</button>
-		      </div>
-	     </div>
-    </div>
- <div id="myModal" class="modal">
+        <div class="footer">
+            <div class="footerPanel">
+                <div id="buttonContainer">
+                    <button id="addBtn" class="Btn" onclick="add()">Add</button>
+                    <button class="Btn" onclick="edit()">Edit</button>
+                    <button class="Btn" onclick="remove()">Remove</button>
+                    <button class="Btn" onclick="share()">Share</button>
+                    <button class="Btn" onclick="download()">Download</button>
+                </div>
+            </div>
+        </div>
+        <div id="myModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2 style="font-family : Consolas, monaco, monospace;">The familyName</h2>
                 <form>
-                  <br><br>
-                  <label class="registerInputTitles">This entry is a:</label>
-                  <select>
-			<option value="Child">Child</option>
-			<option value="Parent">Parent</option>
-		  </select>
-                  <br><br>
-                  <label class="registerInputTitles">Name:</label>
-                  <input type="name" name="entryType" class="registerInputText" placeholder="Name">
-                  <br><br>
-                  <label class="registerInputTitles">Birthdate:</label>
-                  <input type="birthdate" name="entryType" class="registerInputText" style="width:53%"placeholder="MM/DD/YYYY">
+                    <br><br>
+                    <label class="registerInputTitles">This entry is a:</label>
+                    <select>
+                        <option value="Child">Child</option>
+                        <option value="Parent">Parent</option>
+                    </select>
+                    <br><br>
+                    <label class="registerInputTitles">Name:</label>
+                    <input type="name" name="entryType" class="registerInputText" placeholder="Name">
+                    <br><br>
+                    <label class="registerInputTitles">Birthdate:</label>
+                    <input type="birthdate" name="entryType" class="registerInputText" style="width:53%" placeholder="MM/DD/YYYY">
 
-		  <br><br><label class="registerInputTitles">Parent1:</label>
-                  <select>
-			<option value="Child">Child</option>
-		  </select>
-		  <br><br><label class="registerInputTitles">Parent2:</label>
-                  <select>
-		  </select>
-		   <br><br><button class="Btn" onclick="addEntry()">Add Entry</button>
-		</form>
+                    <br><br>
+                    <label class="registerInputTitles">Parent1:</label>
+                    <select>
+                        <option value="Child">Child</option>
+                    </select>
+                    <br><br>
+                    <label class="registerInputTitles">Parent2:</label>
+                    <select></select>
+                    <br><br>
+                    <button class="Btn" onclick="addEntry()">Add Entry</button>
+                </form>
             </div>
         </div>
-</body>
- <script>
+    </body>
+    <script>
         // Get the modal
         var modal = document.getElementById('myModal');
         // Get the button that opens the modal
@@ -71,7 +73,7 @@
         var span = document.getElementsByClassName("close")[0];
         // When the user clicks the button, open the modal
         btn.onclick = function() {
-          event.preventDefault();
+            event.preventDefault();
             modal.style.display = "block";
         }
         // When the user clicks on <span> (x), close the modal
