Add trees to list for each family linked to account

--- a/Templates/controlpanel.html
+++ b/Templates/controlpanel.html
@@ -17,11 +17,13 @@
                 <div class="dropdown">
                     <p class="titleText">Your Treehouses</p>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">
-                                <span class="caret">{{ families[0] }}</span>
-                            </a>
-                        </li>
+                        {% for family in families %}
+                            <li>
+                                <a href="#">
+                                    <span class="caret">{{ family }}</span>
+                                </a>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
