Added links to tree for family selected

--- a/Templates/controlpanel.html
+++ b/Templates/controlpanel.html
@@ -19,7 +19,7 @@
                     <ul class="dropdown-menu">
                         {% for family in families %}
                             <li>
-                                <a href="#">
+                                <a href= "{{ family }}">
                                     <span class="caret">{{ family }}</span>
                                 </a>
                             </li>
