--- a/Templates/controlpanel.html
+++ b/Templates/controlpanel.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/static/controlpanel.css">
+        <link rel="stylesheet" type="text/css" href="/static/ModelBox.css">
         <script></script>
     </head>
     <body>
