--- a/Templates/login.html
+++ b/Templates/login.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/static/login.css">
+        <link rel="stylesheet" type="text/css" href="/static/ModelBox.css">
     </head>
     <body>
         <h1 class="title">Family Tree Creator</h1>
