--- a/Templates/controlpanel.html
+++ b/Templates/controlpanel.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/static/controlpanel.css">
         <link rel="stylesheet" type="text/css" href="/static/ModelBox.css">
-        <script></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
     <body>
         <div class="headerContainer">
@@ -20,7 +20,7 @@
                     <ul class="dropdown-menu">
                         {% for family in families %}
                             <li>
-                                <a href= "{{ family }}">
+                                <a href="{{ family }}">
                                     <span class="caret">{{ family }}</span>
                                 </a>
                             </li>
@@ -29,43 +29,50 @@
                 </div>
             </div>
             <div class="buttonContainer">
-                <button class="Btn" onclick="share()">Share Treehouse</button><br>
-                <button class="Btn" onclick="remove()">Remove Treehouse</button><br>
-                <button id="addBtn" class="Btn" onclick="add()">Add Treehouse</button><br>
+                <button id="shareBtn" class="Btn">Share Treehouse</button><br>
+                <button id="removeBtn" class="Btn">Remove Treehouse</button><br>
+                <button id="addBtn" class="Btn">Add Treehouse</button><br>
                 <button class="Btn" onclick="logout()">Logout</button>
             </div>
         </div>
-        <div id="myModal" class="modal">
+        <div id="addModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <h2 style="font-family : Consolas, monaco, monospace;">The familyName</h2>
+                <h2 style="font-family : Consolas, monaco, monospace;">Enter family name</h2>
                 <form action="/addTree" method="post">
-                    <br><br>
+                    <br>
                     <label class="registerInputTitles">Family Name:</label>
                     <input type="name" name="treeName" class="registerInputText" placeholder="Name">
                     <br><br>
-                    <button class="Btn" onclick="addTreehouse()">Add Treehouse</button>
+                    <button class="Btn" id="addBtn">Add Treehouse</button>
+                </form>
+            </div>
+        </div>
+        <div id="removeModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2 style="font-family : Consolas, monaco, monospace;">Enter name of tree to remove</h2>
+                <form action="/removeTree" method="post">
+                    <br>
+                    <label class="registerInputTitles">Family Name:</label>
+                    <input type="name" name="treeName" class="registerInputText" placeholder="Name">
+                    <br><br>
+                    <button class="Btn" id="removeBtn">Delete Treehouse</button>
                 </form>
             </div>
         </div>
     </body>
     <script>
-        function addTolist() {
-            $("#header ul").append('<li><a href="#"><span class="caret">Tree</span></a></li>');
-        }
-        // Get the modal
-        var modal = document.getElementById('myModal');
-        // Get the button that opens the modal
-        var btn = document.getElementById("addBtn");
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
+        var modal = document.getElementsByClassName("modal")[0];
+        var addBtn = document.getElementById("addBtn");
+        var addSpan = document.getElementsByClassName("close")[0];
         // When the user clicks the button, open the modal
-        btn.onclick = function() {
+        addBtn.onclick = function() {
             event.preventDefault();
             modal.style.display = "block";
         }
         // When the user clicks on <span> (x), close the modal
-        span.onclick = function() {
+        addSpan.onclick = function() {
             modal.style.display = "none";
         }
         // When the user clicks anywhere outside of the modal, close it
@@ -73,6 +80,34 @@
             if (event.target == modal) {
                 modal.style.display = "none";
             }
+        }
+
+        var removeBtn = document.getElementById("removeBtn");
+        var removeSpan = document.getElementsByClassName("close")[1];
+        // When the user clicks the button, open the modal
+        removeBtn.onclick = function() {
+            event.preventDefault();
+            modal = document.getElementsByClassName("modal")[1];
+            modal.style.display = "block";
+        }
+        // When the user clicks on <span> (x), close the modal
+        removeSpan.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        function logout() {
+            event.preventDefault();
+            $.ajax({
+                url: '/logout',
+                type: 'POST',
+                success: function(response) {
+                  console.log("logout")
+                  window.location = "/"; 
+                },
+                error: function(error) {
+                    console.log(error);
+                }
+            });
         }
     </script>
 </html>
