--- a/Templates/regions_modal_included.html
+++ b/Templates/regions_modal_included.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/static/regions_update.css">
+        <link rel="stylesheet" type="text/css" href="/static/ModelBox.css">
     </head>
     <body>
         <div class="panel">
