--- a/Templates/regions_modal_included.html
+++ b/Templates/regions_modal_included.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/static/regions_update.css">
-        <link rel="stylesheet" type="text/css" href="/static/ModelBox.css">
+	<link rel="stylesheet" type="text/css" href="/static/ModelBox.css">
     </head>
     <body>
         <div class="panel">
@@ -64,21 +64,32 @@
                 </form>
             </div>
         </div>
+ 	<div id="removeModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+	 <h2 style="font-family : Consolas, monaco, monospace;">The familyName</h2>
+                <form action="/removeNode" method="post">
+                    <br>
+                    <label class="registerInputTitles">Name:</label>
+                    <input type="name" name="treeName" class="registerInputText" placeholder="Name">
+                    <br><br>
+                    <button class="Btn" id="removeBtn">Delete Person</button>
+                </form>
+            </div>
+        </div>
     </body>
     <script>
-        // Get the modal
-        var modal = document.getElementById('myModal');
-        // Get the button that opens the modal
-        var btn = document.getElementById("addBtn");
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
+        var modal = document.getElementsByClassName("modal")[0];
+        var addBtn = document.getElementById("addBtn");
+        var addSpan = document.getElementsByClassName("close")[0];
+
         // When the user clicks the button, open the modal
-        btn.onclick = function() {
+        addBtn.onclick = function() {
             event.preventDefault();
             modal.style.display = "block";
         }
         // When the user clicks on <span> (x), close the modal
-        span.onclick = function() {
+        addSpan.onclick = function() {
             modal.style.display = "none";
         }
         // When the user clicks anywhere outside of the modal, close it
@@ -86,6 +97,29 @@
             if (event.target == modal) {
                 modal.style.display = "none";
             }
+        }
+	var editBtn = document.getElementById("editBtn");
+	var editSpan = document.getElementsByClassName("close")[1];
+	editBtn.onclick = function() {
+            event.preventDefault();
+	modal = document.getElementsByClassName("modal")[1];
+            modal.style.display = "block";
+        }
+	// When the user clicks on <span> (x), close the modal
+        editSpan.onclick = function() {
+            modal.style.display = "none";
+        }
+        var removeBtn = document.getElementById("removeBtn");
+        var removeSpan = document.getElementsByClassName("close")[2];
+        // When the user clicks the button, open the modal
+        removeBtn.onclick = function() {
+            event.preventDefault();
+            modal = document.getElementsByClassName("modal")[2];
+            modal.style.display = "block";
+        }
+        // When the user clicks on <span> (x), close the modal
+        removeSpan.onclick = function() {
+            modal.style.display = "none";
         }
     </script>
 </html>
