--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -39,7 +39,7 @@
         <div id="myModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <h2 style="font-family : Consolas, monaco, monospace;">The familyName</h2>
+                <h2 style="font-family : Consolas, monaco, monospace;">The {{ familyName }}</h2>
                 <form>
                     <br><br>
                     <label class="registerInputTitles">This entry is a:</label>
@@ -70,7 +70,7 @@
  	<div id="removeModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-	 <h2 style="font-family : Consolas, monaco, monospace;">The familyName</h2>
+	 <h2 style="font-family : Consolas, monaco, monospace;">The {{ familyName }}</h2>
                 <form action="/removeNode" method="post">
                     <br>
                     <label class="registerInputTitles">Name:</label>
