--- a/Templates/controlpanel.html
+++ b/Templates/controlpanel.html
@@ -21,7 +21,7 @@
                         {% for family in families %}
                             <li>
                                 <a href="{{ family }}">
-                                    <span class="caret">{{ family }}</span>
+                                    <span class="caret">{{ familyname }}</span>
                                 </a>
                             </li>
                         {% endfor %}
