--- a/Templates/regions.html
+++ b/Templates/regions.html
@@ -33,7 +33,7 @@
                     <button id="addBtn" class="Btn" onclick="add()">Add</button>
                     <button id="editBtn" class="Btn" onclick="edit()">Edit</button>
                     <button id="removeBtn" class="Btn" onclick="remove()">Remove</button>
-                    <button class="Btn" onclick="download()">Download</button>
+                    <button id="downloadBtn" class="Btn" onclick="download()">Download</button>
                 </div>
             </div>
         </div>
